# Ionova-Analyser

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: deploy.yml
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: main.py
backend/app/analytics/: __init__.py  queries.py
backend/app/api/: imports.py  nl.py  runs.py  saved_filters.py  search.py
backend/app/core/: config.py  db.py  fields.py
backend/app/ingest/: __init__.py  excel_importer.py
backend/app/models/: __init__.py  eval.py
backend/app/nl/: __init__.py  translator.py
backend/app/schemas/: __init__.py
backend/app/search/: __init__.py  ast.py  compiler.py  dsl.py  fields.py
backend/app/storage/: base.py  local.py  s3.py
backend/scripts/: import_file.py
backend/tests/: test_dsl.py  test_ingest.py
frontend/: .env.production  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: BucketsPanel.tsx  QueryBuilder.tsx  ResultDetailDrawer.tsx  ResultsTable.tsx
frontend/src/lib/: api.ts  types.ts
frontend/src/pages/: AnalyticsPage.tsx  ImportsPage.tsx  NlPage.tsx  RunDetailPage.tsx  RunListPage.tsx  SavedFiltersPage.tsx  SearchPage.tsx
frontend/src/ui/: Badge.tsx  Button.tsx  Card.tsx  primitives.tsx
